add faq e melhorias

--- a/index.html
+++ b/index.html
@@ -67,43 +67,60 @@
             </div>
         </div>
     </section>
-    <section class="orcamento container">
-        <h2>Orçamento</h2>
-        <p>Interessado em entrar em contato com um de nossos profissionais?</p>
-        <a href="" class="btn-orcamento">Entre em contato</a>
-    </section>
-    <section class="wrapper-contato" id="contato">
-        <div class="contato container">
-            <div class="logo">
-                <a href="/index.html" class="logo"><img src="/imgs/home.svg" alt=""></a>
-            </div>
-            <div class="contato-box">
-                <h3>Produtos</h3>
-                <ul>
-                    <li><a href="">Mobilia</a></li>
-                    <li><a href="">Segurança</a></li>
-                    <li><a href="">Design Interior</a></li>
-                </ul>
-            </div>
-            <div class="contato-box">
-                <h3>Mais Informações</h3>
-                <ul>
-                    <li><a href="">Contrato</a></li>
-                    <li><a href="">Sobre nós</a></li>
-                    <li><a href="">Termos e Condições</a></li>
-                </ul>
-            </div>
-            <div class="contato-box">
-                <h3>Redes Sociais</h3>
-                <ul>
-                    <li><a href="">Pinterest</a></li>
-                    <li><a href="">Facebook</a></li>
-                    <li><a href="">Instagram</a></li>
-                </ul>
-            </div>
+    <section class="faq container">
+        <h2>FAQ</h2>
+        <dl class="faq-lista js-accordion">
+            <dt>Quero comprar um imóvel</dt>
+            <dd>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore unde ratione nihil! Veritatis nesciunt eos aliquid vero obcaecati earum consectetur magnam quaerat. Excepturi iure voluptatibus officiis ipsa libero sapiente provident.</dd>
 
+            <dt>Quero vender um imóvel</dt>
+            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum deserunt dicta reiciendis voluptatem odio in excepturi itaque ut obcaecati. Atque dolore magni nisi nobis voluptatum eius iste sapiente quod adipisci?</dd>
+
+            <dt>Já sou cliente</dt>
+            <dd>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore unde ratione nihil! Veritatis nesciunt eos aliquid vero obcaecati earum consectetur magnam quaerat. Excepturi iure voluptatibus officiis ipsa libero sapiente provident.</dd>
+
+            <dt>Outras demandas</dt>
+            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum deserunt dicta reiciendis voluptatem odio in excepturi itaque ut obcaecati. Atque dolore magni nisi nobis voluptatum eius iste sapiente quod adipisci?</dd>
+        </dl>
+    </section>
+    <section class="wrapper-orcamento ">
+        <div class="orcamento container">
+            <h2>Orçamento</h2>
+            <p>Interessado em entrar em contato com um de nossos profissionais?</p>
+            <a href="" class="btn-orcamento">Entre em contato</a>
         </div>
     </section>
+    <footer class="contato container" id="contato">
+        <div class="logo">
+            <a href="/index.html" class="logo"><img src="/imgs/home.svg" alt=""></a>
+        </div>
+        <div class="contato-box">
+            <h3>Produtos</h3>
+            <ul>
+                <li><a href="">Mobilia</a></li>
+                <li><a href="">Segurança</a></li>
+                <li><a href="">Design Interior</a></li>
+            </ul>
+        </div>
+        <div class="contato-box">
+            <h3>Mais Informações</h3>
+            <ul>
+                <li><a href="">Contrato</a></li>
+                <li><a href="">Sobre nós</a></li>
+                <li><a href="">Termos e Condições</a></li>
+            </ul>
+        </div>
+        <div class="contato-box">
+            <h3>Redes Sociais</h3>
+            <ul>
+                <li><a href="">Pinterest</a></li>
+                <li><a href="">Facebook</a></li>
+                <li><a href="">Instagram</a></li>
+            </ul>
+        </div>
+        <p class="girapha">Desenvolvido por <a href="https://giovanaraphaelli.vercel.app/" style="color:#f2c48d; font-weight: 600;" target="_blank">@girapha</a></p>
+    </footer>
+    <script src="js/accordion.js"></script>
 
 
 </body>
