melhorias faq e footer

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <ul>
                     <li><a class="ativo" href="#inicio">Início</a></li>
                     <li><a href="#galeria">Galeria</a></li>
+                    <li><a href="#faq">FAQ</a></li>
                     <li><a href="#contato">Contato</a></li>
                     <li><a href=""><img src="/imgs/fi_user.png" alt=""></a></li>
                     <li><a href=""><img src="/imgs/fi_heart.png" alt=""></a></li>
@@ -67,7 +68,7 @@
             </div>
         </div>
     </section>
-    <section class="faq container">
+    <section class="faq container" id="faq">
         <h2>FAQ</h2>
         <dl class="faq-lista js-accordion">
             <dt>Quero comprar um imóvel</dt>
