--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </nav>
         </div>
     </header>
-    <section class="wrapper-inicio" id="inicio">
+    <section class="wrapper-inicio js-scroll" id="inicio">
         <div class="inicio container">
             <div class="inicio-conteudo">
                 <h1>Ajudar você a encontrar o melhor conforto, é nossa prioridade.</h1>
@@ -46,7 +46,7 @@
             <img src="imgs/img.png" alt="">
         </div>
     </section>
-    <section class="design container">
+    <section class="design container js-scroll">
         <img src="imgs/img2.png" alt="">
         <div class="design-conteudo">
             <div class="design-conteudo-box">
@@ -56,7 +56,7 @@
             <a href="">Quero saber mais sobre os designs</a>
         </div>
     </section>
-    <section class="wrapper-galeria" id="galeria">
+    <section class="wrapper-galeria js-scroll" id="galeria">
         <div class="galeria container">
             <h2>Galeria</h2>
             <p>Se você está entediado com a aparência da decoração de interiores da casa comuns,
@@ -68,7 +68,7 @@
             </div>
         </div>
     </section>
-    <section class="faq container" id="faq">
+    <section class="faq container js-scroll" id="faq">
         <h2>FAQ</h2>
         <dl class="faq-lista js-accordion">
             <dt>Quero comprar um imóvel</dt>
@@ -84,7 +84,7 @@
             <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum deserunt dicta reiciendis voluptatem odio in excepturi itaque ut obcaecati. Atque dolore magni nisi nobis voluptatum eius iste sapiente quod adipisci?</dd>
         </dl>
     </section>
-    <section class="wrapper-orcamento ">
+    <section class="wrapper-orcamento js-scroll">
         <div class="orcamento container">
             <h2>Orçamento</h2>
             <p>Interessado em entrar em contato com um de nossos profissionais?</p>
@@ -122,6 +122,7 @@
         <p class="girapha">Desenvolvido por <a href="https://giovanaraphaelli.vercel.app/" style="color:#f2c48d; font-weight: 600;" target="_blank">@girapha</a></p>
     </footer>
     <script src="js/accordion.js"></script>
+    <script src="js/scroll.js"></script>
 
 
 </body>
