diminui btn menu-mobile

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
                 <div class="line3"></div>
             </div>
             <ul class="nav-list">
-                <li><a class="ativo" href="#inicio">Início</a></li>
-                <li><a href="#galeria">Galeria</a></li>
-                <li><a href="#faq">FAQ</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <div class="nav-links">
+                    <li><a class="ativo" href="#inicio">Início</a></li>
+                    <li><a href="#galeria">Galeria</a></li>
+                    <li><a href="#faq">FAQ</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                </div>
                 <div class="nav-icons">
                     <li><a href=""><img src="/imgs/fi_user.png" alt=""></a></li>
                     <li><a href=""><img src="/imgs/fi_heart.png" alt=""></a></li>
