--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
                 <div class="line2"></div>
                 <div class="line3"></div>
             </div>
-            <ul class="nav-list">
-                <div class="nav-links">
+            <div class="nav-list">
+                <ul class="nav-links">
                     <li><a class="ativo" href="#inicio">Início</a></li>
                     <li><a href="#galeria">Galeria</a></li>
                     <li><a href="#faq">FAQ</a></li>
                     <li><a href="#contato">Contato</a></li>
-                </div>
-                <div class="nav-icons">
+                </ul>
+                <ul class="nav-icons">
                     <li><a href=""><img src="/imgs/fi_user.png" alt=""></a></li>
                     <li><a href=""><img src="/imgs/fi_heart.png" alt=""></a></li>
                     <li><a href=""><img src="/imgs/fi_search.png" alt=""></a></li>
-                </div>
+                </ul>
 
-            </ul>
+            </div>
         </nav>
     </header>
     <section class="wrapper-inicio js-scroll" id="inicio">
